--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">tortaruga</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/tortaruga">tortaruga</a>.
   </div>
 </footer>
 </body>
